[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/leoStuff/mini_game3/mini_game3_logic.gd" type="Script" id=1]
[ext_resource path="res://Scenes/leoStuff/shine/card.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/animated_grid_container_plugin/animated_grid_container.gd" type="Script" id=3]
[ext_resource path="res://art/green.png" type="Texture" id=4]
[ext_resource path="res://art/blue.png" type="Texture" id=5]
[ext_resource path="res://Scenes/leoStuff/mini_game1/art/cheat.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "flip to up"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedGridContainer/J:texture_normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedGridContainer/J2:texture_normal")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "shuffle"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "ran_shuffle"
}, {
"args": [  ],
"method": "ran_shuffle"
} ]
}

[node name="Node2D" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="AnimatedGridContainer" type="Container" parent="Control"]
margin_left = 145.0
margin_top = 83.0
margin_right = 389.0
margin_bottom = 338.0
rect_scale = Vector2( 3.28892, 3.28892 )
mouse_filter = 1
script = ExtResource( 3 )
rows = 3
horizontal_separation = 20.0
vertical_separation = 20.0
update_time = 1.0
update_ease = -2.0

[node name="J" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_right = 64.0
margin_bottom = 64.0
stretch_mode = 2

[node name="J2" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_left = 84.0
margin_right = 148.0
margin_bottom = 64.0
stretch_mode = 2

[node name="Q" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_left = 168.0
margin_right = 232.0
margin_bottom = 64.0

[node name="Q2" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_top = 84.0
margin_right = 64.0
margin_bottom = 148.0

[node name="K" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_left = 84.0
margin_top = 84.0
margin_right = 148.0
margin_bottom = 148.0

[node name="K2" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_left = 168.0
margin_top = 84.0
margin_right = 232.0
margin_bottom = 148.0

[node name="A" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_top = 168.0
margin_right = 64.0
margin_bottom = 232.0

[node name="A2" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_left = 84.0
margin_top = 168.0
margin_right = 148.0
margin_bottom = 232.0

[node name="Joker" parent="Control/AnimatedGridContainer" instance=ExtResource( 2 )]
margin_left = 168.0
margin_top = 168.0
margin_right = 232.0
margin_bottom = 232.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
"anims/flip to up" = SubResource( 1 )
anims/shuffle = SubResource( 2 )

[node name="cheat" type="Button" parent="."]
margin_left = -6.0
margin_top = 859.0
margin_right = 328.0
margin_bottom = 1083.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.9, 0.9 )
rect_pivot_offset = Vector2( 167, 112 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[connection signal="pressed" from="Control/AnimatedGridContainer/J/Button" to="Control" method="_on_J_pressed"]
[connection signal="pressed" from="Control/AnimatedGridContainer/J2/Button" to="Control" method="_on_J2_pressed"]

[editable path="Control/AnimatedGridContainer/J"]
[editable path="Control/AnimatedGridContainer/J2"]
[editable path="Control/AnimatedGridContainer/Q"]
[editable path="Control/AnimatedGridContainer/Q2"]
[editable path="Control/AnimatedGridContainer/K"]
[editable path="Control/AnimatedGridContainer/K2"]
[editable path="Control/AnimatedGridContainer/A"]
[editable path="Control/AnimatedGridContainer/A2"]
[editable path="Control/AnimatedGridContainer/Joker"]
